<resources>
    <string name="app_name">Desafio Android Joaquim Gomes</string>
    <string name="name_home">Tela inicial</string>
    <string name="no_network">Parece que o sinal da sua internet está indisponível 📶</string>
    <string name="fragment_home_text_loading_data">Carregando dados</string>
    <string name="fragment_home_character_thumbnail">Imagem do herói</string>
    <string name="fragment_home_textholder_character_name">Nome herói</string>
    <string name="fragment_home_textholder_character_description">Descrição do herói</string>
    <string name="fragment_home_text_no_internet">Sem acesso a internet</string>
    <string name="fragment_home_text_no_server_data">Não foi possível carregar os dados</string>
    <string name="error_no_server_data">Não foi possível carregar os dados</string>
    <string name="text_character_no_description_in_API">Esse personagem não tem descrição 😅</string>
    <string name="text_comic_no_description_in_API">Essa revista não tem descrição 😅</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_character_details_button_nav_to_comic">Verificando se tem revistas...</string>
    <string name="fragment_character_details_text_Field_Name">Nome do pesonagem</string>
    <string name="fragment_character_details_text_Field_Description">Descrição</string>
    <string name="fragment_character_most_expensive_comic_text_Field_Name">Título</string>
    <string name="fragment_character_most_expensive_comic_text_Field_Description">Descrição</string>
    <string name="fragment_character_most_expensive_comic_text_Field_value">Valor</string>
    <string name="name_character_details">Detalhes do personagem</string>
    <string name="name_most_expansive_comic">Revista mais cara</string>
    <string name="character_has_comics">Qual é a revista mais cara?</string>
    <string name="character_has_no_comics">Esse personagem não tem revistas 😵</string>
    <string name="fragment_home_button_load_more_data">Carregar mais personagens</string>
</resources>