<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.joaquimgomes.desafioandroidjoaquimgomes.data.model.Character" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:foregroundGravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/characterLayoutCardCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_home_card_character"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginEnd="15dp">

                <ImageView
                    android:id="@+id/fragment_home_character_thumbnail"
                    android:layout_width="47dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/fragment_home_character_thumbnail"
                    android:gravity="center_horizontal"
                    app:getCharacterImg="@{character.characterThumbnail}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/fragment_home_textholder_character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxWidth="100dp"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@{character.name}"
                    android:textSize="@dimen/fragment_home_dimen_text_character_name"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_home_character_thumbnail"
                    app:layout_constraintStart_toEndOf="@+id/fragment_home_character_thumbnail"
                    app:layout_constraintTop_toTopOf="@+id/fragment_home_character_thumbnail"
                    tools:text="@string/fragment_home_textholder_character_name" />

                <TextView
                    android:id="@+id/fragment_home_textholder_character_description"
                    android:layout_width="160dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxWidth="100dp"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="@dimen/fragment_home_dimen_text_characer_description"
                    app:getCharacterDescription="@{character.description}"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_home_character_thumbnail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fragment_home_character_thumbnail"
                    tools:text="@string/fragment_home_textholder_character_description" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>